<resources>
    <string name="app_name">TV Shows manager</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="search_hint">Type show name</string>
    <string name="title_activity_search_result_details">SearchResultDetailsActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="incoming_episodes">incoming</string>
    <string name="manage_subsribed">your shows</string>
    <string name="search_for_new_shows">discover</string>

    <string name="description">Description: </string>

    <string name="ep_information">Episode Information: </string>
    <string name="show_information">Show Information: </string>
    <string name="season_information">Season Information: </string>

    <string name="next_episode">Next Episode: </string>
    <string name="no_of_seasons">No. of seasons: \u0020</string>
    <string name="no_of_episodes">No. of episodes: \u0020</string>

    <string name="read_more_at">Read more at: </string>

    <string name="name">Name: \u0020</string>
    <string name="season">Season: \u0020</string>
    <string name="episode">Episode: \u0020</string>
    <string name="runtime">Runtime: \u0020</string>
    <string name="airdate">Premiered: \u0020</string>
    <string name="airtime">Airtime: \u0020</string>
    <string name="status">Status: \u0020</string>
    <string name="language">Language: \u0020</string>
    <string name="network">Network: \u0020</string>
    <string name="country">Country: \u0020</string>
    <string name="genres">Genres: \u0020</string>
    <string name="premiere_date">Premiere date: \u0020</string>
    <string name="end_date">End date: \u0020</string>

    <string name="show_section_next_episode_link">Next episode: %1$sx%2$s / %3$s / %4$s / %5$s</string>
    <string name="next_ep_no_info">No information about next episode</string>

    <string name="show_air_years">%1$s - %2$s</string>

    <string name="loading_dialog_msg">Just a second</string>

    <!-- bottom navigation -->
    <string name="bottom_action_search">Search</string>
    <string name="bottom_action_upcoming">Upcoming</string>
    <string name="bottom_action_subscribed">Subscribed</string>

    <string name="snackbar_subscribe">Show is subscribed</string>
    <string name="snackbar_unsubscribe">Show is unsubscribed</string>
</resources>
