<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_subscribed"
        android:enabled="true"
        android:icon="@drawable/ic_collections_bookmark_white_24dp"
        android:title="@string/bottom_action_subscribed"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/bottom_action_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_upcoming"
        android:enabled="true"
        android:icon="@drawable/ic_today_white_24dp"
        android:title="@string/bottom_action_upcoming"
        app:showAsAction="ifRoom" />
</menu>